--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_sort">Sort</string>
     <string name="menu_filter">Filter</string>
     <string name="menu_all">Vše</string>
-    <string name="menu_restriction_all">Přepnout omezení</string>
+    <string name="menu_toggle">Přepnout omezení</string>
     <string name="menu_clear_all">Vymazat vše</string>
     <string name="menu_restrict_all">Omezit vše</string>
     <string name="menu_clear_usage">Vymazat</string>
@@ -129,6 +129,7 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
     <string name="title_deny">Deny</string>
     <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="title_permissions">Permissions</string>
+    <string name="title_set_restrict">Restrict</string>
     <string name="settings_serial">Sériové číslo</string>
     <string name="settings_lat">Zeměpisná šířka</string>
     <string name="settings_lon">Zeměpisná délka</string>
