--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_sort">Ordenar</string>
     <string name="menu_filter">Filtrar</string>
     <string name="menu_all">Todas</string>
-    <string name="menu_restriction_all">Restringir todo</string>
+    <string name="menu_toggle">Restringir todo</string>
     <string name="menu_clear_all">Permitir todo</string>
     <string name="menu_restrict_all">Restringir todo</string>
     <string name="menu_clear_usage">Limpiar</string>
@@ -129,6 +129,7 @@ sin embargo no puedo garantizar que funcione sin ningún fallo para cada disposi
     <string name="title_deny">Denegar</string>
     <string name="title_pleasesubmit">Por favor suba sus restricciones para ayudar a otros usuarios</string>
     <string name="title_permissions">Permissions</string>
+    <string name="title_set_restrict">Restrict</string>
     <string name="settings_serial"># de serie</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
