--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_sort">ソート</string>
     <string name="menu_filter">フィルター</string>
     <string name="menu_all">全て</string>
-    <string name="menu_restriction_all">制限の身に切り替え</string>
+    <string name="menu_toggle">制限の身に切り替え</string>
     <string name="menu_clear_all">全部をクリアする</string>
     <string name="menu_restrict_all">全部を制限する</string>
     <string name="menu_clear_usage">クリア</string>
@@ -129,6 +129,7 @@
     <string name="title_deny">拒否</string>
     <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="title_permissions">Permissions</string>
+    <string name="title_set_restrict">Restrict</string>
     <string name="settings_serial">シリアル番号</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">経度</string>
