--- a/res/values-no-rNO/strings.xml
+++ b/res/values-no-rNO/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_sort">Sorter</string>
     <string name="menu_filter">Filtrer</string>
     <string name="menu_all">Alle</string>
-    <string name="menu_restriction_all">Skift restriksjoner</string>
+    <string name="menu_toggle">Skift restriksjoner</string>
     <string name="menu_clear_all">Nullstill alt</string>
     <string name="menu_restrict_all">Blokk alt</string>
     <string name="menu_clear_usage">Nullstill</string>
@@ -127,6 +127,7 @@
     <string name="title_deny">Nekt</string>
     <string name="title_pleasesubmit">Vennligst last opp restriksjonene dine for å hjelpe andre</string>
     <string name="title_permissions">Permissions</string>
+    <string name="title_set_restrict">Restrict</string>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breddegrad</string>
     <string name="settings_lon">Lengdegrad</string>
