--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_sort">Сортировка</string>
     <string name="menu_filter">Фильтр</string>
     <string name="menu_all">Выделить все</string>
-    <string name="menu_restriction_all">Переключить разрешения</string>
+    <string name="menu_toggle">Переключить разрешения</string>
     <string name="menu_clear_all">Очистить все</string>
     <string name="menu_restrict_all">Запретить все</string>
     <string name="menu_clear_usage">Очистить</string>
@@ -128,6 +128,7 @@
     <string name="title_deny">Запретить</string>
     <string name="title_pleasesubmit">Пожалуйста, отправьте ваши разрешения, чтобы помочь остальным</string>
     <string name="title_permissions">Разрешения</string>
+    <string name="title_set_restrict">Restrict</string>
     <string name="settings_serial">Серийный номер</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Долгота</string>
