--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_sort">Sort</string>
     <string name="menu_filter">Filter</string>
     <string name="menu_all">Vse</string>
-    <string name="menu_restriction_all">Preklopi omejitve</string>
+    <string name="menu_toggle">Preklopi omejitve</string>
     <string name="menu_clear_all">Počisti vse</string>
     <string name="menu_restrict_all">Omeji vse</string>
     <string name="menu_clear_usage">Počisti</string>
@@ -129,6 +129,7 @@
     <string name="title_deny">Deny</string>
     <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="title_permissions">Permissions</string>
+    <string name="title_set_restrict">Restrict</string>
     <string name="settings_serial">Serijska št.</string>
     <string name="settings_lat">Geografska širina</string>
     <string name="settings_lon">Geografska dolžina</string>
