--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_sort">Sort</string>
     <string name="menu_filter">Filter</string>
     <string name="menu_all">Tümü</string>
-    <string name="menu_restriction_all">Toggle restrictions</string>
+    <string name="menu_toggle">Toggle restrictions</string>
     <string name="menu_clear_all">Clear all</string>
     <string name="menu_restrict_all">Restrict all</string>
     <string name="menu_clear_usage">Clear</string>
@@ -128,6 +128,7 @@
     <string name="title_deny">Deny</string>
     <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="title_permissions">Permissions</string>
+    <string name="title_set_restrict">Restrict</string>
     <string name="settings_serial">Seri no</string>
     <string name="settings_lat">Enlem</string>
     <string name="settings_lon">Boylam</string>
