--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_sort">Sort</string>
     <string name="menu_filter">Filter</string>
     <string name="menu_all">Виділити все</string>
-    <string name="menu_restriction_all">Переключити довзоли</string>
+    <string name="menu_toggle">Переключити довзоли</string>
     <string name="menu_clear_all">Очистити всі</string>
     <string name="menu_restrict_all">Заборонити всі</string>
     <string name="menu_clear_usage">Очистити</string>
@@ -129,6 +129,7 @@
     <string name="title_deny">Deny</string>
     <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="title_permissions">Permissions</string>
+    <string name="title_set_restrict">Restrict</string>
     <string name="settings_serial">Серійний номер</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Довгота</string>
