--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_sort">Sort</string>
     <string name="menu_filter">Filter</string>
     <string name="menu_all">Tất cả</string>
-    <string name="menu_restriction_all">Thay đổi các sự hạn chế</string>
+    <string name="menu_toggle">Thay đổi các sự hạn chế</string>
     <string name="menu_clear_all">Xóa tất cả</string>
     <string name="menu_restrict_all">Hạn chế tất cả</string>
     <string name="menu_clear_usage">Xóa</string>
@@ -128,6 +128,7 @@
     <string name="title_deny">Deny</string>
     <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="title_permissions">Permissions</string>
+    <string name="title_set_restrict">Restrict</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Vĩ độ</string>
     <string name="settings_lon">Kinh độ</string>
