--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_sort">排序</string>
     <string name="menu_filter">篩選</string>
     <string name="menu_all">所有程式</string>
-    <string name="menu_restriction_all">套用預設規則</string>
+    <string name="menu_toggle">套用預設規則</string>
     <string name="menu_clear_all">清除全部</string>
     <string name="menu_restrict_all">限制全部</string>
     <string name="menu_clear_usage">清除記錄</string>
@@ -129,6 +129,7 @@
     <string name="title_deny">封鎖</string>
     <string name="title_pleasesubmit">稍後請上傳您的設定到社群網路利人利己 :)</string>
     <string name="title_permissions">Permissions</string>
+    <string name="title_set_restrict">Restrict</string>
     <string name="settings_serial">序號</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">經度</string>
