--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -1,13 +1,13 @@
 <resources>
 
-    <string name="app_notxposed" formatted="false">لم يتم تثبيت إطار xposed نسخة %d+</string>
+    <string name="app_notxposed" formatted="false">لم يتم تثبيت إطار Xposed نسخة %d+</string>
     <string name="app_notenabled">لم يتم تفعيل XPrivacy</string>
     <string name="app_wrongandroid">فقط لأندرويد نسخة 4.0.3+</string>
     <string name="app_incompatible" formatted="false">XPrivacy غير متوافق مع %s</string>
-    <string name="app_version" formatted="false">نسخة XPrivacy : %s (%d)</string>
+    <string name="app_version">نسخة XPrivacy\u200F : %1$s (%2$d)</string>
     <string name="app_description">مدير الخصوصية الرئيسي</string>
     <string name="app_xversion" formatted="false">إطار  Xposed نسخة : %d</string>
-    <string name="app_copyright">حقوق الطبع \u00A9 2013–2014 ل M. Bokhorst (M66B)</string>
+    <string name="app_copyright">حقوق الطبع \u00A9 2013–2014 ل M. Bokhorst (M66B)\u200E</string>
     <string name="app_licensed">License found, thanks for your support!</string>
     <string name="menu_usage">الإستخدام</string>
     <string name="menu_refresh">إنعاش</string>
