--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -1,14 +1,14 @@
 <resources>
 
-    <string name="app_notxposed" formatted="false">Xposed מסגרת גרסה &amp;d+ אינו מותקן</string>
+    <string name="app_notxposed" formatted="false">Xposed מסגרת גרסה %d+ אינו מותקן</string>
     <string name="app_notenabled">XPrivacy אינו מאופשר במתקין Xposed</string>
     <string name="app_wrongandroid">Only for Android version 4.0.3+</string>
     <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
-    <string name="app_version" formatted="false">XPrivacy גירסא: %s (%d)</string>
+    <string name="app_version">גירסא XPrivacy\u200F: %1$s (%2$d)</string>
     <string name="app_description">The ultimate privacy manager</string>
-    <string name="app_xversion" formatted="false">גרסת מסגרת Xposed: %d</string>
-    <string name="app_copyright">כל הזכויות שמורות \ u00A9 2013–2014 על ידי מ \'Bokhorst (M66B)</string>
-    <string name="app_licensed">Licensed, thanks for your support!</string>
+    <string name="app_xversion">גרסת מסגרת Xposed\u200F: %1$d</string>
+    <string name="app_copyright">כל הזכויות שמורות \u00A9 2013–2014 על ידי מ Bokhorst (M66B)\u200E</string>
+    <string name="app_licensed">License found, thanks for your support!</string>
     <string name="menu_usage">Usage</string>
     <string name="menu_refresh">Refresh</string>
     <string name="menu_settings">הגדרות</string>
