--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -155,6 +155,7 @@
     <string name="settings_https">إستخدم الإتصال الآمن</string>
     <string name="settings_syscomponents">تقييد مكونات نظام (أندرويد) (يتطلب إعادة التشغيل)</string>
     <string name="settings_usagedata">إظهار بيانات استخدام التطبيق (يتطلب إعادة التشغيل)</string>
+    <string name="settings_parameters">Show parameters of usage data</string>
     <string name="settings_cid">GSM Cell ID</string>
     <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">ضغطة طويلة في الإسم لتحديده</string>
