--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -155,6 +155,7 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
     <string name="settings_https">Použít zabezpečené připojení</string>
     <string name="settings_syscomponents">Omezit systémové komponenty (Android) (vyžaduje restart)</string>
     <string name="settings_usagedata">Zobrazit využítí dat aplikace (vyžaduje restart)</string>
+    <string name="settings_parameters">Show parameters of usage data</string>
     <string name="settings_cid">GSM Cell ID</string>
     <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Long press name to select</string>
