--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -155,6 +155,7 @@ sin embargo no puedo garantizar que funcione sin ningún fallo para cada disposi
     <string name="settings_https">Usar conexiones seguras</string>
     <string name="settings_syscomponents">Restringir componentes del sistema (Android) (requiere reinicio)</string>
     <string name="settings_usagedata">Mostrar uso de datos de las aplicaciones (requires restart)</string>
+    <string name="settings_parameters">Show parameters of usage data</string>
     <string name="settings_cid">GSM Cell ID</string>
     <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Click largo sobre un nombre selecciona la aplicación</string>
