--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -155,6 +155,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="settings_https">Utiliser des connexions sécurisée</string>
     <string name="settings_syscomponents">Restreindre composants système (Android) (redémarrage requis)</string>
     <string name="settings_usagedata">Montrer les données d\'usage pour chaque application (redémarrage requis)</string>
+    <string name="settings_parameters">Show parameters of usage data</string>
     <string name="settings_cid">GSM Cell ID</string>
     <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Maintenez appuyé le nom de l\'appli pour le selectionner</string>
