--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -155,6 +155,7 @@ tuttavia non è possibile garantire che funzioni perfettamente su qualunque disp
     <string name="settings_https">Usa connessioni sicure</string>
     <string name="settings_syscomponents">Restringi componenti di sistema (Android)</string>
     <string name="settings_usagedata">Mostra utilizzo dati dell\'applicazione</string>
+    <string name="settings_parameters">Show parameters of usage data</string>
     <string name="settings_cid">GSM Cell ID</string>
     <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Tieni premuto sul nome per selezionare</string>
