--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -155,6 +155,7 @@ namun ia adalah mustahil untuk menjaminkan penggunaan sempurna untuk setiap pera
     <string name="settings_https">Guna sambungan terjamin</string>
     <string name="settings_syscomponents">Sekat komponen sistem (Android)</string>
     <string name="settings_usagedata">Tunjuk penggunaan data aplikasi</string>
+    <string name="settings_parameters">Show parameters of usage data</string>
     <string name="settings_cid">GSM Cell ID</string>
     <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Tekan lama pada nama untuk pilih</string>
