--- a/res/values-nb-rNO/strings.xml
+++ b/res/values-nb-rNO/strings.xml
@@ -153,6 +153,7 @@
     <string name="settings_https">Bruk trygg forbindelse</string>
     <string name="settings_syscomponents">Blokker systemkomponenter (Android) (omstart nødvendig)</string>
     <string name="settings_usagedata">Vis brukerdata til apper (omstart nødvendig)</string>
+    <string name="settings_parameters">Show parameters of usage data</string>
     <string name="settings_cid">GSM Cell ID</string>
     <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">>Trykk lenge på navnet som skal markeres</string>
