--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -155,6 +155,7 @@
     <string name="settings_https">Использовать безопасные соединения</string>
     <string name="settings_syscomponents">Запретить системные компоненты (Android) (требует перезапуска)</string>
     <string name="settings_usagedata">Показывать использование данных (требует перезапуска)</string>
+    <string name="settings_parameters">Show parameters of usage data</string>
     <string name="settings_cid">GSM Cell ID</string>
     <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Длинное нажатие на имени для выбора</string>
