--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -154,6 +154,7 @@
     <string name="settings_https">Sử dụng các kết nối được bảo mật</string>
     <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
     <string name="settings_usagedata">Show application usage data (requires restart)</string>
+    <string name="settings_parameters">Show parameters of usage data</string>
     <string name="settings_cid">GSM Cell ID</string>
     <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Long press name to select</string>
