--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -155,6 +155,7 @@
     <string name="settings_https">使用加密連線 (HTTPS)</string>
     <string name="settings_syscomponents">可限制安卓系統元件(需重新啟動)</string>
     <string name="settings_usagedata">開啟操作記錄(需重新啟動)</string>
+    <string name="settings_parameters">Show parameters of usage data</string>
     <string name="settings_cid">GSM Cell ID</string>
     <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">長按程式名稱可選取</string>
