--- a/res/values-ku-rIQ/strings.xml
+++ b/res/values-ku-rIQ/strings.xml
@@ -102,7 +102,7 @@
     <string name="whitelist_command">Shell commands</string>
     <string name="whitelist_url">URLs</string>
     <string name="title_restrict">هه ل بژیره بوو سنوردارکردنی:</string>
-    <string name="title_check_whitelist">Check to allow</string>
+    <string name="title_check_whitelist">Check to allow:</string>
     <string name="title_fused">پالاوتن به هوی داتا به کارهینراوه کان</string>
     <string name="title_finternet">پالاوتنی ئه و به رنامانه ی ئينته ر نيت به كاردينن</string>
     <string name="title_fpermission">پالاوتنی ئه و زانياريانه ى كه ده توانريت به كاربهينرين</string>
