--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -103,7 +103,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="whitelist_command">Shell commands</string>
     <string name="whitelist_url">URLs</string>
     <string name="title_restrict">Clique para restringir:</string>
-    <string name="title_check_whitelist">Check to allow</string>
+    <string name="title_check_whitelist">Check to allow:</string>
     <string name="title_fused">Filter on data usage</string>
     <string name="title_finternet">Filter on internet access</string>
     <string name="title_fpermission">Filter on permission</string>
