--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -103,7 +103,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="whitelist_command">Shell commands</string>
     <string name="whitelist_url">URLs</string>
     <string name="title_restrict">Bifeaza pentru a restrictiona:</string>
-    <string name="title_check_whitelist">Check to allow</string>
+    <string name="title_check_whitelist">Check to allow:</string>
     <string name="title_fused">Filter on data usage</string>
     <string name="title_finternet">Filter on internet access</string>
     <string name="title_fpermission">Filter on permission</string>
