--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -103,7 +103,7 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="whitelist_command">Shell commands</string>
     <string name="whitelist_url">URLs</string>
     <string name="title_restrict">Markera för att blockera:</string>
-    <string name="title_check_whitelist">Check to allow</string>
+    <string name="title_check_whitelist">Check to allow:</string>
     <string name="title_fused">Filtrera efter använd data</string>
     <string name="title_finternet">Filtrera efter internetbehörighet</string>
     <string name="title_fpermission">Filtrera efter behörighet</string>
