--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -103,7 +103,7 @@
     <string name="whitelist_command">Shell commands</string>
     <string name="whitelist_url">URLs</string>
     <string name="title_restrict">Позначте для заборони:</string>
-    <string name="title_check_whitelist">Check to allow</string>
+    <string name="title_check_whitelist">Check to allow:</string>
     <string name="title_fused">що використовують дані</string>
     <string name="title_finternet">з доступом до Інтернету</string>
     <string name="title_fpermission">з дозволами</string>
