--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -102,7 +102,7 @@
     <string name="whitelist_command">Shell commands</string>
     <string name="whitelist_url">URLs</string>
     <string name="title_restrict">Đánh dấu để hạn chế:</string>
-    <string name="title_check_whitelist">Check to allow</string>
+    <string name="title_check_whitelist">Check to allow:</string>
     <string name="title_fused">Lọc theo sử dụng dữ liệu</string>
     <string name="title_finternet">Lọc theo truy cập internet</string>
     <string name="title_fpermission">Lọc theo quyền</string>
