--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -103,7 +103,7 @@
     <string name="whitelist_command">Shell 指令</string>
     <string name="whitelist_url">網址</string>
     <string name="title_restrict">限制項目:</string>
-    <string name="title_check_whitelist">Check to allow</string>
+    <string name="title_check_whitelist">Check to allow:</string>
     <string name="title_fused">程式曾取得過資訊</string>
     <string name="title_finternet">程式要求網際網路權限</string>
     <string name="title_fpermission">程式要求手機權限</string>
