--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -112,7 +112,7 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="whitelist_url" tools:ignore="UnusedResources">URLs</string>
     <string name="whitelist_proc" tools:ignore="UnusedResources">/proc</string>
     <string name="title_restrict">Check to restrict:</string>
-    <string name="title_check_whitelist">Check to allow</string>
+    <string name="title_check_whitelist">Check to allow:</string>
     <string name="title_fused">Filter on data usage</string>
     <string name="title_finternet">Filter on internet access</string>
     <string name="title_fpermission">Filter on permission</string>
